--- a/radius-relocation/package.json
+++ b/radius-relocation/package.json
@@ -8,11 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "@googlemaps/react-wrapper": "^1.1.16",
+    "@reach/combobox": "^0.16.5",
+    "@react-google-maps/api": "^2.7.0",
+    "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "formik": "^2.2.9",
+    "framer-motion": "^5.4.1",
+    "next": "^12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "swr": "^1.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.47.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "eslint": "7.32.0",
