--- a/radius-relocation/package.json
+++ b/radius-relocation/package.json
@@ -16,11 +16,15 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^9.6.1",
+    "firebase-functions": "^3.16.0",
     "formik": "^2.2.9",
     "framer-motion": "^5.4.1",
     "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^4.0.1",
+    "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
     "swr": "^1.1.0",
     "yup": "^0.32.11"
