--- a/radius-relocation/package.json
+++ b/radius-relocation/package.json
@@ -26,7 +26,6 @@
     "react-firebase-hooks": "^4.0.1",
     "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
-    "swr": "^1.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -34,8 +33,11 @@
     "@types/googlemaps": "^3.43.3",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
+    "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.5",
     "typescript": "4.5.2"
   }
 }
