--- a/radius-relocation/package.json
+++ b/radius-relocation/package.json
@@ -8,7 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@googlemaps/react-wrapper": "^1.1.16",
+    "@mui/material": "^5.2.4",
     "@reach/combobox": "^0.16.5",
     "@react-google-maps/api": "^2.7.0",
     "axios": "^0.24.0",
