--- a/radius-relocation/package.json
+++ b/radius-relocation/package.json
@@ -10,37 +10,41 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@googlemaps/react-wrapper": "^1.1.16",
-    "@mui/material": "^5.2.4",
+    "@googlemaps/react-wrapper": "^1.1.20",
+    "@mui/material": "^5.2.8",
     "@reach/combobox": "^0.16.5",
     "@react-google-maps/api": "^2.7.0",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "firebase": "^9.6.1",
+    "dotenv": "^11.0.0",
+    "express": "^4.17.2",
+    "firebase": "^9.6.3",
     "firebase-functions": "^3.16.0",
     "formik": "^2.2.9",
-    "framer-motion": "^5.4.1",
-    "next": "^12.0.7",
+    "framer-motion": "^5.6.0",
+    "next": "^12.0.8",
     "react": "17.0.2",
+    "react-datepicker": "^4.6.0",
     "react-dom": "17.0.2",
-    "react-firebase-hooks": "^4.0.1",
+    "react-firebase-hooks": "^4.0.2",
     "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
+    "react-places-autocomplete": "^7.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/google.maps": "^3.47.0",
+    "@types/google.maps": "^3.47.2",
     "@types/googlemaps": "^3.43.3",
-    "@types/node": "16.11.11",
-    "@types/react": "17.0.37",
-    "autoprefixer": "^10.4.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4",
+    "@types/node": "17.0.8",
+    "@types/react": "17.0.38",
+    "@types/react-datepicker": "^4.3.4",
+    "@types/react-places-autocomplete": "^7.2.9",
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.6.0",
+    "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.5",
-    "typescript": "4.5.2"
+    "tailwindcss": "^3.0.14",
+    "typescript": "4.5.4"
   }
 }
