--- a/package.json
+++ b/package.json
@@ -5,46 +5,59 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@googlemaps/react-wrapper": "^1.1.20",
-    "@mui/material": "^5.2.8",
+    "@googlemaps/react-wrapper": "^1.1.23",
+    "@mui/material": "^5.4.1",
     "@reach/combobox": "^0.16.5",
     "@react-google-maps/api": "^2.7.0",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "cors": "^2.8.5",
-    "dotenv": "^11.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "firebase": "^9.6.3",
-    "firebase-functions": "^3.16.0",
+    "firebase": "^9.6.6",
+    "firebase-functions": "^3.17.2",
     "formik": "^2.2.9",
-    "framer-motion": "^5.6.0",
-    "next": "^12.0.8",
+    "framer-motion": "^6.2.6",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "17.0.2",
-    "react-firebase-hooks": "^4.0.2",
+    "react-firebase-hooks": "^5.0.2",
     "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
     "react-places-autocomplete": "^7.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/google.maps": "^3.47.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@types/google.maps": "^3.47.4",
     "@types/googlemaps": "^3.43.3",
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
+    "@types/jest": "^27.4.0",
+    "@types/node": "17.0.17",
+    "@types/react": "17.0.39",
     "@types/react-datepicker": "^4.3.4",
+    "@types/react-dom": "^17.0.11",
     "@types/react-places-autocomplete": "^7.2.9",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "autoprefixer": "^10.4.2",
-    "eslint": "8.6.0",
-    "eslint-config-next": "^12.0.8",
-    "postcss": "^8.4.5",
+    "eslint": "^8.8.0",
+    "eslint-config-next": "^12.0.10",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^27.5.1",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.14",
-    "typescript": "4.5.4"
+    "react-test-renderer": "^17.0.2",
+    "tailwindcss": "^3.0.21",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
+    "typescript": "4.5.5"
   }
 }
